--- a/Hotel-Management-Software/Hotel-Management-Software.BussinessLogic/Hotel-Management-Software.BLL.csproj
+++ b/Hotel-Management-Software/Hotel-Management-Software.BussinessLogic/Hotel-Management-Software.BLL.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>Hotel_Management_Software.BussinessLogic</RootNamespace>
+    <RootNamespace>Hotel_Management_Software.BBL</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
