--- a/Hotel-Management-Software/Hotel-Management-Software.DataAccess/Hotel-Management-Software.DAL.csproj
+++ b/Hotel-Management-Software/Hotel-Management-Software.DataAccess/Hotel-Management-Software.DAL.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>Hotel_Management_Software.DataAccess</RootNamespace>
+    <RootNamespace>Hotel_Management_Software.DAL</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
