--- a/Hotel-Management-Software/Dockerfile
+++ b/Hotel-Management-Software/Dockerfile
@@ -3,16 +3,16 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER app
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+EXPOSE 8080
+EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Hotel-Management-Software/Hotel-Management-Software.API.csproj", "Hotel-Management-Software/"]
 COPY ["Hotel-Management-Software.BussinessLogic/Hotel-Management-Software.BLL.csproj", "Hotel-Management-Software.BussinessLogic/"]
-COPY ["Hotel-Management-Software.DAL/Hotel-Management-Software.DAL.csproj", "Hotel-Management-Software.DataAccess/"]
-COPY ["Hotel-Management-Software/Hotel-Management-Software.DTO.csproj", "Hotel-Management-Software.DTO/"]
+COPY ["Hotel-Management-Software.DataAccess/Hotel-Management-Software.DAL.csproj", "Hotel-Management-Software.DataAccess/"]
+COPY ["Hotel-Management-Software.DTO/Hotel-Management-Software.DTO.csproj", "Hotel-Management-Software.DTO/"]
 RUN dotnet restore "./Hotel-Management-Software/./Hotel-Management-Software.API.csproj"
 COPY . .
 WORKDIR "/src/Hotel-Management-Software"
