--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,8 +5,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-
+  build_and_push:
+    name: Build and push
     runs-on: ubuntu-latest
     
     steps:
