--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,13 @@ jobs:
   build:
     name: Deploy
     uses: ./.github/workflows/docker-publish.yml
+    env:
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
   update-db:
     needs: build
     name: Apply migrations
     uses: ./.github/workflows/update-db.yml
+    env:
+      CONNECTION_STRING: ${{ secrets.CONNECTION_STRING }}
