--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,13 +11,10 @@ jobs:
   build:
     name: Deploy
     uses: ./.github/workflows/docker-publish.yml
-    env:
-      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+    secrets: inherit
 
   update-db:
     needs: build
     name: Apply migrations
     uses: ./.github/workflows/update-db.yml
-    env:
-      CONNECTION_STRING: ${{ secrets.CONNECTION_STRING }}
+    secrets: inherit
