--- a/Hotel-Management-Software/Hotel-Management-Software.DTO/Hotel-Management-Software.DTO.csproj
+++ b/Hotel-Management-Software/Hotel-Management-Software.DTO/Hotel-Management-Software.DTO.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="MimeKit" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Hotel\" />
+  </ItemGroup>
+
 </Project>
