--- a/Hotel-Management-Software/Hotel-Management-Software/Hotel-Management-Software.API.csproj
+++ b/Hotel-Management-Software/Hotel-Management-Software/Hotel-Management-Software.API.csproj
@@ -22,6 +22,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="MimeKit" Version="4.3.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
