--- a/Hotel-Management-Software/Hotel-Management-Software.BussinessLogic/Hotel-Management-Software.BLL.csproj
+++ b/Hotel-Management-Software/Hotel-Management-Software.BussinessLogic/Hotel-Management-Software.BLL.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.0" />
+    <PackageReference Include="CloudinaryDotNet" Version="1.26.0" />
     <PackageReference Include="FluentValidation" Version="11.9.0" />
     <PackageReference Include="MailKit" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
