--- a/Hotel-Management-Software/Hotel-Management-Software/appsettings.json
+++ b/Hotel-Management-Software/Hotel-Management-Software/appsettings.json
@@ -7,6 +7,7 @@
     "Issuer": "myissuer",
     "Audience": "myaudience"
   },
+  "CLOUDINARY_URL": "cloudinary://991756633442185:kv0LnyzyuOSpmPm-c3YQ69gTRhE@dxxjyqbzt",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
