Added global usings and reference to the dtos.

--- a/Hotel-Management-Software/Hotel-Management-Software.BLL.Tests/Hotel-Management-Software.BLL.Tests.csproj
+++ b/Hotel-Management-Software/Hotel-Management-Software.BLL.Tests/Hotel-Management-Software.BLL.Tests.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Hotel-Management-Software.BussinessLogic\Hotel-Management-Software.BLL.csproj" />
+    <ProjectReference Include="..\Hotel-Management-Software.DTO\Hotel-Management-Software.DTO.csproj" />
   </ItemGroup>
 
   <ItemGroup>
