Add project dependencies.

--- a/Hotel-Management-Software/Hotel-Management-Software.API.Tests/Hotel-Management-Software.API.Tests.csproj
+++ b/Hotel-Management-Software/Hotel-Management-Software.API.Tests/Hotel-Management-Software.API.Tests.csproj
@@ -22,6 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Hotel-Management-Software.BussinessLogic\Hotel-Management-Software.BLL.csproj" />
+    <ProjectReference Include="..\Hotel-Management-Software.DTO\Hotel-Management-Software.DTO.csproj" />
     <ProjectReference Include="..\Hotel-Management-Software\Hotel-Management-Software.API.csproj" />
   </ItemGroup>
 
